--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,6 @@ pydantic==2.7.1
 numpy>=1.24
 soundfile>=0.12
 scipy>=1.11
-git+https://github.com/myshell-ai/OpenVoice.git@v2.0.0
+git+https://github.com/myshell-ai/OpenVoice.git@main
 torch==2.2.2+cu122
 aiofiles>=23.2
